--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 
 
 <meta name="apple-itunes-app" content="app-id=502838820">
-<meta name="google-play-app" content="app-id=ru.hh.android, urlParams=a=1">
+<meta name="google-play-app" content="app-id=ru.hh.android, url-params=a=1">
 
 <meta name="msApplication-ID" content="microsoft.build.App"/>
 <meta name="msApplication-PackageFamilyName" content="microsoft.build_8wekyb3d8bbwe"/>
