--- a/test/index.html
+++ b/test/index.html
@@ -41,9 +41,9 @@
 				daysHidden: 15, // days to hide banner after close button is clicked (defaults to 15)
 				daysReminder: 90, // days to hide banner after "VIEW" button is clicked (defaults to 90)
 				appStoreLanguage: 'us', // language code for the App Store (defaults to user's browser language)
-				title: 'KudaGo',
+				title: 'KudaGo - New smart app',
 				author: 'KudaGo Inc',
-				button: 'OPEN',
+				button: 'Visualizza',
 				force: force
 		});
 	};
